--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,8 @@
 {
-    "name": "tadchai/web-app_project",
-    "autoload": {
-        "psr-4": {
-            "Tadchai\\WebAppProject\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Tadchai",
-            "email": "Tadpmr@gmail.com"
-        }
-    ],
     "require": {
-        "slim/slim": "4.*",
+        "slim/slim": "^4.0",
         "slim/psr7": "^1.7",
-        "slim/http": "^1.4",
         "illuminate/database": "^11.21",
-        "vlucas/phpdotenv": "^5.6",
-        "php-di/php-di": "^7.0"
+        "firebase/php-jwt": "^6.10"
     }
 }
