--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,13 @@
 {
     "require": {
-        "slim/slim": "^4.0",
-        "slim/psr7": "^1.7",
-        "illuminate/database": "^11.21",
-        "firebase/php-jwt": "^6.10"
+        "slim/slim": "^4.8",
+        "slim/psr7": "^1.4",
+        "illuminate/database": "^8.0",
+        "firebase/php-jwt": "^6.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\Middleware\\": "src/Middleware/"
+        }
     }
 }
